--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Project"
+permalink: /Project/
 author_profile: true
 ---
 
